# kinect-firmware-utils

./: Cargo.toml  README.md  flake.nix
pkgs/: default.nix  kinect-firmware-blob.nix  kinect-firmware-utils.nix  kinect-udev-rules.nix
src/: header.rs  lib.rs  main.rs  protocol.rs
src/protocol/: internal.rs
udev/: 55-kinect_audio.rules.in
