[package]
name = "kinect-firmware-utils"
version = "0.1.0"
edition = "2021"
default-run = "kinect-firmware-utils"

[lints.clippy]
unwrap_used = "warn"

[dependencies]
binrw = "0.13.3"
env_logger = "0.11.3"
log = "0.4.21"
rusb = "0.9"

[[bin]]
name = "firmware-status"
path = "src/bin/firmware-status.rs"
